feat: add files to shelter-adaptive version

--- a/shelter/css/default.css
+++ b/shelter/css/default.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  min-width: 1280px;
+  min-width: 320px;
   min-height: 100vh;
   font-family: 'Georgia', sans-serif;
   background-color: #ffffff;
@@ -20,6 +20,7 @@ body {
 
 img, 
 svg {
+  display: block;
   max-width: 100%;
   max-height: 100%;
   height: auto;
