--- a/shelter/css/main/friends.css
+++ b/shelter/css/main/friends.css
@@ -26,6 +26,7 @@
   padding: 0 40px;
   justify-content: space-between;
   align-items: center;
+  gap: 12px;
 }
 
 .slider__button {
@@ -37,7 +38,7 @@
   padding: 23px 19px;
   border: 2px solid #f1cdb3;
   border-radius: 100px;
-  transition: all 0.5s ease-in-out;
+  transition: border-color, background 0.5s ease-in-out;
 }
 
 .slider__button:hover {
@@ -56,20 +57,23 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
+  gap: 10px;
+  overflow: hidden;
 }
 
 .slider__card {
   max-width: 270px;
   width: 100%;
+  border: 1px solid transparent;
   border-radius: 9px;
   background: #fafafa;
   cursor: pointer;
-  transition: all 0.5s ease-in-out;
+  transition: background, border 0.5s ease-in-out;
 }
 
 .card__description {
   display: flex;
-  padding: 25px 41.5px;
+  padding: 30px 41.5px;
   flex-direction: column;
   align-items: center;
   gap: 29px;
@@ -91,13 +95,13 @@
   letter-spacing: 0.06em;
   color: #292929;
   white-space: nowrap;
-  transition: all 0.5s ease-in-out;
+  transition: border-color, background 0.5s ease-in-out;
 }
 
 .slider__card:hover, 
 .slider__card:active {
   background: #ffffff;
-  box-shadow: 0px 0px 20px 10px #fddcc480;
+  border: 1px solid #54545454;
 }
 
 .slider__card:hover .card__button, 
@@ -107,7 +111,6 @@
 }
 
 .friends__button {
-  margin-top: 5px;
   padding: 15px 45px;
   border-radius: 100px;
   background: #f1cdb3;
@@ -115,10 +118,104 @@
   line-height: 1.3;
   letter-spacing: 0.06em;
   color: #292929;
-  transition: all 0.5s ease-in-out;
+  transition: background 0.5s ease-in-out;
 }
 
 .friends__button:hover, 
 .friends__button:active {
   background: #fddcc4;
+}
+
+@media (min-width: 1280px) {
+  .slider__wrapper {
+    gap: 90px;
+  }
+}
+
+@media (max-width: 1037px) {
+  .card:last-of-type {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .friends__slider {
+    padding: 0 30px;
+  }
+
+  .slider__wrapper {
+    gap: 5.4vw;
+  }
+}
+
+@media (max-width: 767px) {
+  .slider__wrapper {
+    gap: 10px;
+  }
+
+  .card:nth-last-of-type(2n) {
+    display: none;
+  }
+
+  .slider__wrapper {
+    justify-content: center;
+  }
+
+  .slider__card {
+    max-width: 60vw;
+  }
+
+  .card__image, 
+  .card__description {
+    width: 60vw;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 490px) {
+  .friends {
+    padding: 42px 10px;
+    gap: 42px;
+  }
+
+  .friends__title {
+    font-size: 25px;
+  }
+
+  .friends__slider {
+    flex-wrap: wrap;
+    padding: 0 15px;
+    gap: 20px;
+  }
+
+  .slider__wrapper {
+    order: -1;
+    flex-shrink: 0;
+  }
+
+  .slider__button:first-of-type {
+    margin-left: 43px;
+  }
+
+  .slider__button:last-of-type {
+    margin-right: 43px;
+  }
+
+  .slider__card {
+    max-width: 100%;
+  }
+
+  .card__image {
+    width: 100%;
+  }
+
+  .card__description {
+    width: 88vw;
+  }
+}
+
+@media (max-width: 320px) {
+  .card__description {
+    width: 100%;
+  }
 }
