--- a/shelter/css/main/header.css
+++ b/shelter/css/main/header.css
@@ -11,6 +11,7 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 30px 40px 0;
+  overflow: hidden;
 }
 
 .header__menu {
@@ -26,7 +27,7 @@
   justify-content: center;
   align-items: center;
   cursor: default;
-  transition: all 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 }
 
 .header__logo:hover {
@@ -48,6 +49,33 @@
   color: #ffffff;
 }
 
+.nav__burger {
+  position: relative;
+  display: none;
+  width: 30px;
+  height: 22px;
+}
+
+.nav__burger-label, 
+.nav__burger-label:before, 
+.nav__burger-label:after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #f1cdb3;
+}
+
+.nav__burger-label:before {
+  content: "";
+  top: -10px;
+}
+
+.nav__burger-label:after {
+  content: "";
+  top: 10px;
+}
+
 .nav__list {
   display: flex;
   justify-content: center;
@@ -60,7 +88,7 @@
   font-size: 15px;
   line-height: 1.6;
   color: #cdcdcd;
-  transition: all 1s ease-in-out;
+  transition: color 1s ease-in-out;
 }
 
 .nav__link:hover, 
@@ -97,4 +125,26 @@
 @keyframes band {
   from {width: 0;}
   to {width: 100%;}
+}
+
+@media (max-width: 960px) {
+  .header__container {
+    padding: 30px 30px 0;
+  }
+}
+
+@media (max-width: 767.9px) {
+  .nav__burger {
+    display: block;
+  }
+
+  .nav__list {
+    display: none;
+  }
+}
+
+@media (max-width: 540px) {
+  .header__container {
+    padding: 30px 20px 0;
+  }
 }
