--- a/shelter/css/main/hero.css
+++ b/shelter/css/main/hero.css
@@ -9,7 +9,7 @@
   display: flex;
   max-width: 460px;
   width: 100%;
-  padding-top: 163px;
+  padding-top: 12.8vw;
   flex-direction: column;
   align-items: flex-start;
   gap: 42px;
@@ -39,11 +39,86 @@
   line-height: 1.3;
   letter-spacing: 0.06em;
   color: #292929;
-  transition: all 0.5s ease-in-out;
+  transition: background, box-shadow 0.5s ease-in-out;
 }
 
 .hero__button:hover, 
 .hero__button:active {
   background: #fddcc4;
   box-shadow: 0px 0px 20px 5px #ffffff80;
+}
+
+.hero__image {
+  max-width: 698px;
+  min-width: 450px;
+  width: 100%;
+}
+
+@media (min-width: 1281px) {
+  .hero__description {
+    padding-top: 163px;
+  }
+}
+
+@media (max-width: 960px) {
+  .hero {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 100px;
+    margin-top: 60px;
+  }
+
+  .hero__description {
+    max-width: 100%;
+    margin: 0 16vw;
+    padding-top: 0;
+  }
+
+  .hero__button {
+    margin: 0 auto;
+  }
+
+  .hero__image {
+    max-width: 568px;
+    margin-right: -18vw;
+  }
+}
+
+@media (max-width: 540px) {
+  .hero__description {
+    text-align: center;
+  }
+
+  .hero__title {
+    font-size: 34px;
+    letter-spacing: 0.06em;
+  }
+
+  .hero__image {
+    max-width: 450px;
+    min-width: 260px;
+  }
+}
+
+@media (max-width: 410px) {
+  .hero {
+    min-width: 300px;
+    margin-left: -10px;
+    gap: 105px;
+  }
+
+  .hero__description {
+    margin: 0;
+  }
+
+  .hero__title {
+    max-width: 260px;
+    margin: 0 auto;
+    font-size: 25px;
+  }
+
+  .hero__image {
+    max-width: 260px;
+    margin-right: -12.5vw;
+  }
 }
