--- a/shelter/css/pets/header.css
+++ b/shelter/css/pets/header.css
@@ -23,7 +23,7 @@
   gap: 10px;
   justify-content: center;
   align-items: center;
-  transition: all 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 }
 
 .header__logo:hover {
@@ -45,6 +45,33 @@
   color: #292929;
 }
 
+.nav__burger {
+  position: relative;
+  display: none;
+  width: 30px;
+  height: 22px;
+}
+
+.nav__burger-label, 
+.nav__burger-label:before, 
+.nav__burger-label:after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #000000;
+}
+
+.nav__burger-label:before {
+  content: "";
+  top: -10px;
+}
+
+.nav__burger-label:after {
+  content: "";
+  top: 10px;
+}
+
 .nav__list {
   display: flex;
   justify-content: center;
@@ -57,7 +84,7 @@
   font-size: 15px;
   line-height: 1.6;
   color: #545454;
-  transition: all 1s ease-in-out;
+  transition: color 1s ease-in-out;
 }
 
 .nav__link:hover, 
@@ -94,4 +121,26 @@
 @keyframes band {
   from {width: 0;}
   to {width: 100%;}
+}
+
+@media (max-width: 960px) {
+  .header__container {
+    padding: 30px 30px;
+  }
+}
+
+@media (max-width: 767.9px) {
+  .nav__burger {
+    display: block;
+  }
+
+  .nav__list {
+    display: none;
+  }
+}
+
+@media (max-width: 540px) {
+  .header__container {
+    padding: 30px 20px;
+  }
 }
